--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <input type="text" id="todoInput" placeholder="Add a new todo">
+    <button onclick="addTodo()">Add todo</button>
+
+    <ol id="list"></ol>
+
+    <script src="app.js"></script>
 </body>
 </html>
